--- a/node/package.json
+++ b/node/package.json
@@ -10,10 +10,13 @@
     "node-pre-gyp": "^0.17.0"
   },
   "devDependencies": {
+    "crypto-ld": "^4.0.3",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
     "jest": "^26.6.3",
+    "jsonld": "^3.2.0",
+    "jsonld-signatures": "^6.0.0",
     "node-pre-gyp-github": "^1.4.3",
     "prettier": "2.2.1"
   },
