--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Tiago Nascimento <tiago.nascimento@spruceid.com>"]
 edition = "2018"
 
 [dependencies]
-ssi = { path = "../../ssi" } 
+ssi = { path = "../../ssi", default-features = false, features = ["ed25519-dalek", "sha2", "rand"] }
 wasm-bindgen = "0.2"
 serde_json = "1.0"
 wasm-bindgen-futures = "0.4"
